# wasm-server

./: README.md  copy.sh
wasm-client/: next.config.ts  package.json
wasm-client/app/: page.tsx
wasm-modules/module1/: Cargo.toml
wasm-modules/module1/src/: lib.rs
wasm-modules/module2/: Cargo.toml
wasm-modules/module2/src/: lib.rs
wasm-modules/module3/: Cargo.toml
wasm-modules/module3/src/: lib.rs
wasm-modules/module4/: Cargo.toml
wasm-modules/module4/src/: lib.rs
wasm-server/: .gitignore  Cargo.toml
wasm-server/src/: main.rs
wasm-server/static/: module1.wasm  module2.wasm  module3.wasm  module4.wasm
