[package]
name = "wasm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws", "http2", "macros", "multipart"] }
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
